<resources>
    <string name="app_name">UK-Gebaerden</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigate_up">Navigate up</string>
    <string name="browse_signs">Browse signs</string>
    <string name="train_signs_passive">Train signs (passive)</string>
    <string name="train_signs_active">Train signs (active)</string>
    <string name="about_signs">About signs</string>
    <string name="settings">Settings</string>
    <string name="sign_browser">Browser</string>
    <string name="sign_trainer_active">Trainer (active)</string>
    <string name="signIconDescription">signIcon</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search signs</string>
    <string name="search_results">Search results for:</string>
    <string name="action_toggle_starred">Toggle starred</string>
    <string name="starredButton">Starred button</string>
    <string name="videoIsPlaying">Video is playing</string>
    <string name="videoError">Video error</string>
    <string name="videoIsLoading">Video is loading</string>
    <string name="action_settings">Settings</string>
    <string name="learningProgress">Learning progress: %s</string>
...
