<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_sign_browser"
            android:icon="@drawable/ic_ondemand_video"
            android:title="@string/browse_signs" />
        <item
            android:id="@+id/nav_sign_trainer"
            android:icon="@drawable/ic_school"
            android:title="@string/train_signs" />
        <item
            android:id="@+id/nav_sign_info"
            android:icon="@drawable/ic_info"
            android:title="@string/about_signs" />
      </group>

</menu>
